Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-755

query fail when resource management use yarn

    XMLWordPrintableJSON

Details

    Description

      2016-05-21 02:49:09.431664 CST,,,p562205,th-1343915904,,,,0,con4,,seg-10000,,,,,"FATAL","XX000","HAWQ RM Validation. Wrong resource counter ratio. Host XXXXXXXX Allocated (6144 MB, 2.000000 CORE) available (0 MB, 0.000000 CORE), (resourcepool.c:4067)",,,,,,,0,,"resourcepool.c",4067,"Stack trace:
      1 0x87212f postgres <symbol not found> + 0x87212f
      2 0x872819 postgres elog_finish + 0xa9
      3 0x8df7c5 postgres validateResourcePoolStatus + 0x345
      4 0x8e0fa8 postgres allocateResourceFromResourcePoolIOBytes2 + 0x518
      5 0x8f0334 postgres dispatchResourceToQueries_EVEN + 0x464
      6 0x8e9e41 postgres dispatchResourceToQueriesInOneQueue + 0x61
      7 0x8f0cdf postgres dispatchResourceToQueries + 0x75f
      8 0x8fda2d postgres MainHandlerLoop + 0x17d 9 0x8fdf2a postgres ResManagerMainServer2ndPhase + 0x1ba
      10 0x8fe35c postgres ResManagerMain + 0x39c 11 0x8fe6e1 postgres ResManagerProcessStartup + 0x181
      12 0x75e6f8 postgres <symbol not found> + 0x75e6f8
      13 0x75f5b2 postgres <symbol not found> + 0x75f5b2
      14 0x76494d postgres <symbol not found> + 0x76494d
      15 0x7664ae postgres PostmasterMain + 0xc7e
      16 0x6c072a postgres main + 0x48a 17 0x34db21ed5d libc.so.6 __libc_start_main + 0xfd 18 0x4a14e9 postgres <symbol not found> + 0x4a14e9
      "

      Attachments

        Issue Links

          Activity

            People

              wlin Wen Lin
              pangzhenzhou pangzhenzhou
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: