HAWQ-755. Fix validateResourcePoolStatus assertion