src/backend/resourcemanager/resourcepool.c
@@ -3219,7 +3219,7 @@ void returnAllGRMResourceFromSegment(SegResource segres)
 	reorderSegResourceCombinedWorkloadIndex(segres);
 
 	Assert(segres->Allocated.MemoryMB == 0);
-	Assert(segres->Allocated.Core == 0.0);
+	Assert(IS_DOUBLE_ZERO(segres->Allocated.Core));
 	segres->GRMContainerCount = 0;
 
 	elog(DEBUG3, "HAWQ RM: returnAllResourceForSegment: %u containers have been "
@@ -3339,7 +3339,7 @@ int notifyToBeAcceptedGRMContainersToRMSEG(void)
 	{
 		GRMContainerSet ctns = (GRMContainerSet)(((PAIR)lfirst(cell))->Value);
 
-		if ( ctns->Allocated.MemoryMB == 0 && ctns->Allocated.Core == 0 )
+		if ( ctns->Allocated.MemoryMB == 0 && IS_DOUBLE_ZERO(ctns->Allocated.Core))
 		{
 			continue;
 		}
@@ -3390,7 +3390,7 @@ int notifyToBeKickedGRMContainersToRMSEG(void)
 	{
 		GRMContainerSet ctns = (GRMContainerSet)(((PAIR)lfirst(cell))->Value);
 
-		if (ctns->Allocated.Core == 0 || ctns->Allocated.MemoryMB == 0)
+		if (IS_DOUBLE_ZERO(ctns->Allocated.Core) || ctns->Allocated.MemoryMB == 0)
 		{
 			continue;
 		}
@@ -3972,7 +3972,7 @@ void dropAllToAcceptGRMContainersToKicked(void)
 	{
 		GRMContainerSet ctns = (GRMContainerSet)(((PAIR)lfirst(cell))->Value);
 
-		if ( ctns->Allocated.MemoryMB == 0 && ctns->Allocated.Core == 0 )
+		if ( ctns->Allocated.MemoryMB == 0 && IS_DOUBLE_ZERO(ctns->Allocated.Core))
 		{
 			continue;
 		}
@@ -4019,9 +4019,9 @@ void validateResourcePoolStatus(bool refquemgr)
 													   &availmem,
 													   &availcore);
 			if ( segres->Allocated.MemoryMB != allocmem ||
-				 segres->Allocated.Core   	!= alloccore ||
+				 !IS_DOUBLE_EQ(segres->Allocated.Core, alloccore) ||
 				 segres->Available.MemoryMB != availmem ||
-				 segres->Available.Core   	!= availcore )
+				 !IS_DOUBLE_EQ(segres->Available.Core, availcore) )
 			{
 				elog(ERROR, "HAWQ RM Validation. Wrong resource counter. "
 							"Host %s. "
@@ -4043,11 +4043,11 @@ void validateResourcePoolStatus(bool refquemgr)
 			/* Validation 2. The ratio should be correct. */
 			double r1 = alloccore == 0 ? 0 : allocmem/alloccore;
 			double r2 = availcore == 0 ? 0 : availmem/availcore;
-			if ( (allocmem == 0 && alloccore != 0) ||
-				 (allocmem != 0 && alloccore == 0) ||
-				 (availmem == 0 && availcore != 0) ||
-				 (availmem != 0 && availcore == 0) ||
-				 (alloccore != 0 && availcore != 0 &&
+			if ( (allocmem == 0 && !IS_DOUBLE_ZERO(alloccore)) ||
+				 (allocmem != 0 && IS_DOUBLE_ZERO(alloccore)) ||
+				 (availmem == 0 && !IS_DOUBLE_ZERO(availcore)) ||
+				 (availmem != 0 && IS_DOUBLE_ZERO(availcore)) ||
+				 (!IS_DOUBLE_ZERO(alloccore) && !IS_DOUBLE_ZERO(availcore) &&
 				  2 * fabs(r1-r2) / (r1 + r2) > VALIDATE_RATIO_BIAS) )
 			{
 				elog(ERROR, "HAWQ RM Validation. Wrong resource counter ratio. "
@@ -4135,7 +4135,7 @@ void validateResourcePoolStatus(bool refquemgr)
 		Assert( PQUEMGR->RatioTrackers[0] != NULL );
 
 		if ( PQUEMGR->RatioTrackers[0]->TotalAllocated.MemoryMB != totalallocmem ||
-			 PQUEMGR->RatioTrackers[0]->TotalAllocated.Core     != totalalloccore )
+			 !IS_DOUBLE_EQ(PQUEMGR->RatioTrackers[0]->TotalAllocated.Core,totalalloccore))
 		{
 			elog(ERROR, "HAWQ RM Validation. Wrong total allocated resource. "
 						"In resource pool allocated (%d MB, %lf CORE), "
@@ -4147,7 +4147,8 @@ void validateResourcePoolStatus(bool refquemgr)
 		}
 
 		if ( totalavailmem > totalallocmem ||
-			 totalavailcore > totalalloccore * (1+VALIDATE_RESOURCE_BIAS) )
+			(( totalavailcore > totalalloccore * (1+VALIDATE_RESOURCE_BIAS)) &&
+			 (!IS_DOUBLE_ZERO(totalavailcore) || !IS_DOUBLE_ZERO(totalalloccore))))
 		{
 				elog(ERROR, "HAWQ RM Validation. Wrong total allocated resource. "
 							"In resource pool available (%d MB, %lf CORE), "
@@ -4473,7 +4474,7 @@ void getSegResResourceCountersByMemCoreCounters(SegResource  resinfo,
 			core += ((GRMContainer)lfirst(cell))->Core;
 		}
 
-		if ( mem != ctns->Allocated.MemoryMB || core != ctns->Allocated.Core )
+		if ( mem != ctns->Allocated.MemoryMB || !IS_DOUBLE_EQ(core,ctns->Allocated.Core) )
 		{
 			elog(ERROR, "HAWQ RM Validation. Wrong container set counter. "
 						"Host %s.",
